--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -78,7 +78,7 @@
                                         <li><a href="services.html">服务</a></li>
                                         <li><a href="news.html">新闻</a></li>
                                         <li><a href="contact.html">联系</a></li>
-                                        <li><a href="http://121.37.68.94/backindex">登录</a></li>
+                                        <!-- <li><a href="http://121.37.68.94/backindex">登录</a></li>-->
                                     </ul>
                                 </nav>
                             </div>
@@ -89,7 +89,7 @@
                                     <button type="button" class="search-trigger"><i class="pe-7s-search"></i></button>
                                 </div>
                                 <div class="header__btn d-none d-xl-block">
-                                    <a href="contact.html" class="v-btn">联系我们 <i class="fal fa-arrow-alt-right"></i></a>
+                                    <a href="http://121.37.68.94/backindex" class="v-btn">登录<i class="fal fa-arrow-alt-right"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -105,7 +105,7 @@
             <div class="side-info-content">
                 <div class="offset-widget offset-logo mb-30 pb-20">
                     <div class="row align-items-center">
-                        <div class="col-9"><a href="index.html"><img src="assets/img/logo/logo-5.png" alt="Logo"></a>
+                        <div class="col-9"><a href="index.html"><img id="img01" src="assets/img/logo/logo-5.png" alt="Logo"></a>
                         </div>
                         <div class="col-3 text-end"><button class="side-info-close"><i
                                     class="fal fa-times"></i></button></div>
@@ -1236,6 +1236,7 @@
 
     <!-- JS here -->
     <script src="assets/js/vendor/jquery-3.6.0.min.js"></script>
+    <script src="assets/js/test.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/owl.carousel.min.js"></script>
     <script src="assets/js/isotope.pkgd.min.js"></script>
