公司展示页面图片路径替换

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -64,7 +64,7 @@
                                 </div>
                                 <div class="logo-1">
                                     <a href="index.html">
-                                        <img src="assets/img/logo/logo-4.png" alt="logo">
+                                        <img id="logo-4" src="assets/img/logo/logo-4.png" alt="logo">
                                     </a>
                                 </div>
                             </div>
@@ -105,7 +105,7 @@
             <div class="side-info-content">
                 <div class="offset-widget offset-logo mb-30 pb-20">
                     <div class="row align-items-center">
-                        <div class="col-9"><a href="index.html"><img id="img01" src="assets/img/logo/logo-5.png" alt="Logo"></a>
+                        <div class="col-9"><a href="index.html"><img id="logo-5" src="assets/img/logo/logo-5.png" alt="Logo"></a>
                         </div>
                         <div class="col-3 text-end"><button class="side-info-close"><i
                                     class="fal fa-times"></i></button></div>
