完成了公司展示页面图片路径替换。

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -52,7 +52,7 @@
                 <div class="row align-items-center">
                     <div class="col-xl-2 col-lg-2 col-6">
                         <div class="logo">
-                            <a href="index.html"><img id="logo" src="assets/img/logo/logo.png" alt="site logo"></a>
+                            <a href="index.html"><img class="logoImg" src="assets/img/logo/logo.png" alt="site logo"></a>
                         </div>
                     </div>
                     <div class="col-xl-8 col-lg-8 d-none d-lg-block">
@@ -89,7 +89,7 @@
             <div class="side-info-content">
                 <div class="offset-widget offset-logo mb-30 pb-20">
                     <div class="row align-items-center">
-                        <div class="col-9"><a href="index.html"><img id="logo" src="assets/img/logo/logo.png" alt="Logo"></a>
+                        <div class="col-9"><a href="index.html"><img class="logoImg" src="assets/img/logo/logo.png" alt="Logo"></a>
                         </div>
                         <div class="col-3 text-end"><button class="side-info-close"><i
                                     class="fal fa-times"></i></button></div>
@@ -117,38 +117,38 @@
                 <div class="row side-gallery gx-4">
                     <div class="col-4 mb-20">
                         <div class="side-image">
-                            <a class="popup-image" href="assets/img/projects/pr-img1.jpg"><img
-                                    src="assets/img/projects/pr-img1.jpg" alt="sidebar-img"></a>
+                            <a class="popup-image pr-img1h" href="assets/img/projects/pr-img1.jpg"><img
+                                   class="pr-img1" src="assets/img/projects/pr-img1.jpg" alt="sidebar-img"></a>
                         </div>
                     </div>
                     <div class="col-4 mb-20">
                         <div class="side-image">
-                            <a class="popup-image" href="assets/img/projects/pr-img2.jpg"><img
-                                    src="assets/img/projects/pr-img2.jpg" alt="sidebar-img"></a>
+                            <a class="popup-image pr-img2h" href="assets/img/projects/pr-img2.jpg"><img
+                                    class="pr-img2" src="assets/img/projects/pr-img2.jpg" alt="sidebar-img"></a>
                         </div>
                     </div>
                     <div class="col-4 mb-20">
                         <div class="side-image">
-                            <a class="popup-image" href="assets/img/projects/pr-img3.jpg"><img
-                                    src="assets/img/projects/pr-img3.jpg" alt="sidebar-img"></a>
+                            <a class="popup-image pr-img3h" href="assets/img/projects/pr-img3.jpg"><img
+                                    class="pr-img3" src="assets/img/projects/pr-img3.jpg" alt="sidebar-img"></a>
                         </div>
                     </div>
                     <div class="col-4 mb-20">
                         <div class="side-image">
-                            <a class="popup-image" href="assets/img/projects/pr-img4.jpg"><img
-                                    src="assets/img/projects/pr-img4.jpg" alt="sidebar-img"></a>
+                            <a class="popup-image pr-img4h" href="assets/img/projects/pr-img4.jpg"><img
+                                    class="pr-img4" src="assets/img/projects/pr-img4.jpg" alt="sidebar-img"></a>
                         </div>
                     </div>
                     <div class="col-4 mb-20">
                         <div class="side-image">
-                            <a class="popup-image" href="assets/img/projects/pr-img5.jpg"><img
-                                    src="assets/img/projects/pr-img5.jpg" alt="sidebar-img"></a>
+                            <a class="popup-image pr-img5h" href="assets/img/projects/pr-img5.jpg"><img
+                                    class="pr-img5" src="assets/img/projects/pr-img5.jpg" alt="sidebar-img"></a>
                         </div>
                     </div>
                     <div class="col-4 mb-20">
                         <div class="side-image">
-                            <a class="popup-image" href="assets/img/projects/pr-img6.jpg"><img
-                                    src="assets/img/projects/pr-img6.jpg" alt="sidebar-img"></a>
+                            <a class="popup-image pr-img6h" href="assets/img/projects/pr-img6.jpg"><img
+                                    class="pr-img6" src="assets/img/projects/pr-img6.jpg" alt="sidebar-img"></a>
                         </div>
                     </div>
                 </div>
@@ -221,9 +221,9 @@
                 <div class="row wow slideInUp">
                     <div class="col-lg-6">
                         <div class="about__img mb-30 ml-70 f-left p-relative">
-                            <img src="../../../../files/image/about/about4.jpg" alt="logistics and transport image">
+                            <img id="about4" src="../../../../files/image/about/about4.jpg" alt="logistics and transport image">
                             <div class="founder tr">
-                                <img src="assets/img/about/about5.jpg" alt="">
+                                <img if="about5" src="assets/img/about/about5.jpg" alt="">
                                 <h6><a href="#">詹杜·威利姆</a></h6>
                                 <span>创始人</span>
                             </div>
