--- a/src/main/resources/templates/services.html
+++ b/src/main/resources/templates/services.html
@@ -52,7 +52,7 @@
                 <div class="row align-items-center">
                     <div class="col-xl-2 col-lg-2 col-6">
                         <div class="logo">
-                            <a href="index.html"><img src="assets/img/logo/logo.png" alt="site logo"></a>
+                            <a href="index.html"><img class="logoImg" src="assets/img/logo/logo.png" alt="site logo"></a>
                         </div>
                     </div>
                     <div class="col-xl-8 col-lg-8 d-none d-lg-block">
@@ -89,7 +89,7 @@
             <div class="side-info-content">
                 <div class="offset-widget offset-logo mb-30 pb-20">
                     <div class="row align-items-center">
-                        <div class="col-9"><a href="index.html"><img src="assets/img/logo/logo.png" alt="Logo"></a>
+                        <div class="col-9"><a href="index.html"><img class="logoImg" src="assets/img/logo/logo.png" alt="Logo"></a>
                         </div>
                         <div class="col-3 text-end"><button class="side-info-close"><i
                                     class="fal fa-times"></i></button></div>
@@ -117,38 +117,38 @@
                 <div class="row side-gallery gx-4">
                     <div class="col-4 mb-20">
                         <div class="side-image">
-                            <a class="popup-image" href="assets/img/projects/pr-img1.jpg"><img
-                                    src="assets/img/projects/pr-img1.jpg" alt="sidebar-img"></a>
+                            <a class="popup-image pr-img1h" href="assets/img/projects/pr-img1.jpg"><img
+                                   class="pr-img1" src="assets/img/projects/pr-img1.jpg" alt="sidebar-img"></a>
                         </div>
                     </div>
                     <div class="col-4 mb-20">
                         <div class="side-image">
-                            <a class="popup-image" href="assets/img/projects/pr-img2.jpg"><img
-                                    src="assets/img/projects/pr-img2.jpg" alt="sidebar-img"></a>
+                            <a class="popup-image pr-img2h" href="assets/img/projects/pr-img2.jpg"><img
+                                    class="pr-img2" src="assets/img/projects/pr-img2.jpg" alt="sidebar-img"></a>
                         </div>
                     </div>
                     <div class="col-4 mb-20">
                         <div class="side-image">
-                            <a class="popup-image" href="assets/img/projects/pr-img3.jpg"><img
-                                    src="assets/img/projects/pr-img3.jpg" alt="sidebar-img"></a>
+                            <a class="popup-image pr-img3h" href="assets/img/projects/pr-img3.jpg"><img
+                                    class="pr-img3" src="assets/img/projects/pr-img3.jpg" alt="sidebar-img"></a>
                         </div>
                     </div>
                     <div class="col-4 mb-20">
                         <div class="side-image">
-                            <a class="popup-image" href="assets/img/projects/pr-img4.jpg"><img
-                                    src="assets/img/projects/pr-img4.jpg" alt="sidebar-img"></a>
+                            <a class="popup-image pr-img4h" href="assets/img/projects/pr-img4.jpg"><img
+                                    class="pr-img4" src="assets/img/projects/pr-img4.jpg" alt="sidebar-img"></a>
                         </div>
                     </div>
                     <div class="col-4 mb-20">
                         <div class="side-image">
-                            <a class="popup-image" href="assets/img/projects/pr-img5.jpg"><img
-                                    src="assets/img/projects/pr-img5.jpg" alt="sidebar-img"></a>
+                            <a class="popup-image pr-img5h" href="assets/img/projects/pr-img5.jpg"><img
+                                    class="pr-img5" src="assets/img/projects/pr-img5.jpg" alt="sidebar-img"></a>
                         </div>
                     </div>
                     <div class="col-4 mb-20">
                         <div class="side-image">
-                            <a class="popup-image" href="assets/img/projects/pr-img6.jpg"><img
-                                    src="assets/img/projects/pr-img6.jpg" alt="sidebar-img"></a>
+                            <a class="popup-image pr-img6h" href="assets/img/projects/pr-img6.jpg"><img
+                                    class="pr-img6" src="assets/img/projects/pr-img6.jpg" alt="sidebar-img"></a>
                         </div>
                     </div>
                 </div>
@@ -208,7 +208,7 @@
                     </div>
                     <div class="col-md-5 wow slideInRight">
                         <div class="page-title-img f-right d-none d-sm-block">
-                            <img src="assets/img/slider/cargo-image-sm.png" alt="">
+                            <img id="cargo-image-sm" src="assets/img/slider/cargo-image-sm.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -223,7 +223,7 @@
                         <div class="blog__post mb-30 b-2 b-3">
                             <div class="blog__img p-relative">
                                 <div class="blog__thumb">
-                                    <a href=""><img src="assets/img/post/post-07.jpg" alt=""></a>
+                                    <a href=""><img id="post-07" src="assets/img/post/post-07.jpg" alt=""></a>
                                 </div>
                                 <div class="blog__date">
                                     <i class="icofont-airplane-alt"></i>
@@ -240,7 +240,7 @@
                         <div class="blog__post mb-30 b-2 b-3">
                             <div class="blog__img p-relative">
                                 <div class="blog__thumb">
-                                    <a href=""><img src="assets/img/post/post-08.jpg" alt=""></a>
+                                    <a href=""><img id="post-08" src="assets/img/post/post-08.jpg" alt=""></a>
                                 </div>
                                 <div class="blog__date">
                                     <i class="icofont-ship-alt"></i>
@@ -257,7 +257,7 @@
                         <div class="blog__post mb-30 b-2 b-3">
                             <div class="blog__img p-relative">
                                 <div class="blog__thumb">
-                                    <a href=""><img src="assets/img/post/post-09.jpg" alt=""></a>
+                                    <a href=""><img id="post-09" src="assets/img/post/post-09.jpg" alt=""></a>
                                 </div>
                                 <div class="blog__date">
                                     <i class="icofont-sail-boat-alt-2"></i>
@@ -275,7 +275,7 @@
                         <div class="blog__post mb-30 b-2 b-3">
                             <div class="blog__img p-relative">
                                 <div class="blog__thumb">
-                                    <a href=""><img src="assets/img/post/post-10.jpg" alt=""></a>
+                                    <a href=""><img id="post-10" src="assets/img/post/post-10.jpg" alt=""></a>
                                 </div>
                                 <div class="blog__date">
                                     <i class="icofont-rocket"></i>
@@ -292,7 +292,7 @@
                         <div class="blog__post mb-30 b-2 b-3">
                             <div class="blog__img p-relative">
                                 <div class="blog__thumb">
-                                    <a href=""><img src="assets/img/post/post-11.jpg" alt=""></a>
+                                    <a href=""><img id="post-11" src="assets/img/post/post-11.jpg" alt=""></a>
                                 </div>
                                 <div class="blog__date">
                                     <i class="icofont-train-line"></i>
@@ -309,7 +309,7 @@
                         <div class="blog__post mb-30 b-2 b-3">
                             <div class="blog__img p-relative">
                                 <div class="blog__thumb">
-                                    <a href=""><img src="assets/img/post/post-12.jpg" alt=""></a>
+                                    <a href=""><img id="post-12" src="assets/img/post/post-12.jpg" alt=""></a>
                                 </div>
                                 <div class="blog__date">
                                     <i class="icofont-truck"></i>
@@ -326,99 +326,7 @@
             </div>
         </section>
         <!-- news area end -->
-        <!-- cta area start  -->
-        <div class="cta__area-2 rb pt-120 pb-120 p-relative" data-background="assets/img/bg/cta-bg.jpg">
-            <div class="container">
-                <div class="cta__form wow slideInUp">
-                    <ul>
-                        <li class="selection">
-                            <select name="transport" id="transport">
-                                <option value="01">选择运输方式</option>
-                                <option value="01">空运</option>
-                                <option value="01">陆运</option>
-                                <option value="01">航运</option>
-                            </select>
-                        </li>
-                        <li class="selection">
-                            <select name="from-country" id="from-country">
-                                <option value="01">起点</option>
-                                <option value="01">北京</option>
-                                <option value="01">上海</option>
-                                <option value="01">甘肃</option>
-                            </select>
-                        </li>
-                        <li class="selection">
-                            <select name="to-country" id="to-country">
-                                <option value="01">终点</option>
-                                <option value="01">北京</option>
-                                <option value="01">上海</option>
-                                <option value="01">甘肃</option>
-                            </select>
-                        </li>
-                        <li class="shipment-date">
-                            <input type="text" placeholder="预期时间">
-                        </li>
-                        <li class="get-estimate get-estimate-2">
-                            <button type="submit" class="shutter-btn" >下单<i
-                                    class="fal fa-arrow-right"></i></button>
-                        </li>
-                    </ul>
-                </div>
-                <div class="icons-line mt-30 wow slideInUp">
-                    <ul>
-                        <li class="trp-icon">
-                            <i class="fal fa-ship"></i>
-                        </li>
-                        <li class="h-rule">
-                            <i class="fas fa-horizontal-rule"></i>
-                            <i class="fas fa-horizontal-rule"></i>
-                            <i class="fas fa-horizontal-rule"></i>
-                            <i class="fas fa-horizontal-rule"></i>
-                            <i class="fas fa-horizontal-rule"></i>
-                            <i class="fas fa-horizontal-rule"></i>
-                            <i class="fas fa-horizontal-rule"></i>
-                            <i class="fas fa-horizontal-rule"></i>
-                            <i class="fas fa-horizontal-rule"></i>
-                            <i class="fas fa-horizontal-rule"></i>
-                        </li>
-                        <li class="trp-icon">
-                            <i class="fal fa-truck"></i>
-                        </li>
-                        <li class="h-rule">
-                            <i class="fas fa-horizontal-rule"></i>
-                            <i class="fas fa-horizontal-rule"></i>
-                            <i class="fas fa-horizontal-rule"></i>
-                            <i class="fas fa-horizontal-rule"></i>
-                            <i class="fas fa-horizontal-rule"></i>
-                            <i class="fas fa-horizontal-rule"></i>
-                            <i class="fas fa-horizontal-rule"></i>
-                            <i class="fas fa-horizontal-rule"></i>
-                            <i class="fas fa-horizontal-rule"></i>
-                            <i class="fas fa-horizontal-rule"></i>
-                        </li>
-                        <li class="trp-icon">
-                            <i class="fal fa-shuttle-van"></i>
-                        </li>
-                        <li class="h-rule">
-                            <i class="fas fa-horizontal-rule"></i>
-                            <i class="fas fa-horizontal-rule"></i>
-                            <i class="fas fa-horizontal-rule"></i>
-                            <i class="fas fa-horizontal-rule"></i>
-                            <i class="fas fa-horizontal-rule"></i>
-                            <i class="fas fa-horizontal-rule"></i>
-                            <i class="fas fa-horizontal-rule"></i>
-                            <i class="fas fa-horizontal-rule"></i>
-                            <i class="fas fa-horizontal-rule"></i>
-                            <i class="fas fa-horizontal-rule"></i>
-                        </li>
-                        <li class="trp-icon">
-                            <i class="fal fa-plane-departure"></i>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <!-- cta area end -->
+
     </main>
     <!-- footer area start  -->
     <footer>
