--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -52,7 +52,7 @@
                 <div class="row align-items-center">
                     <div class="col-xl-2 col-lg-2 col-6">
                         <div class="logo">
-                            <a href="index.html"><img src="assets/img/logo/logo.png" alt="site logo"></a>
+                            <a href="index.html"><img class="logoImg" src="assets/img/logo/logo.png" alt="site logo"></a>
                         </div>
                     </div>
                     <div class="col-xl-8 col-lg-8 d-none d-lg-block">
@@ -89,7 +89,7 @@
             <div class="side-info-content">
                 <div class="offset-widget offset-logo mb-30 pb-20">
                     <div class="row align-items-center">
-                        <div class="col-9"><a href="index.html"><img src="assets/img/logo/logo.png" alt="Logo"></a>
+                        <div class="col-9"><a href="index.html"><img class="logoImg" src="assets/img/logo/logo.png" alt="Logo"></a>
                         </div>
                         <div class="col-3 text-end"><button class="side-info-close"><i
                                     class="fal fa-times"></i></button></div>
@@ -117,38 +117,38 @@
                 <div class="row side-gallery gx-4">
                     <div class="col-4 mb-20">
                         <div class="side-image">
-                            <a class="popup-image" href="assets/img/projects/pr-img1.jpg"><img
-                                    src="assets/img/projects/pr-img1.jpg" alt="sidebar-img"></a>
+                            <a class="popup-image pr-img1h" href="assets/img/projects/pr-img1.jpg"><img
+                                   class="pr-img1" src="assets/img/projects/pr-img1.jpg" alt="sidebar-img"></a>
                         </div>
                     </div>
                     <div class="col-4 mb-20">
                         <div class="side-image">
-                            <a class="popup-image" href="assets/img/projects/pr-img2.jpg"><img
-                                    src="assets/img/projects/pr-img2.jpg" alt="sidebar-img"></a>
+                            <a class="popup-image pr-img2h" href="assets/img/projects/pr-img2.jpg"><img
+                                    class="pr-img2" src="assets/img/projects/pr-img2.jpg" alt="sidebar-img"></a>
                         </div>
                     </div>
                     <div class="col-4 mb-20">
                         <div class="side-image">
-                            <a class="popup-image" href="assets/img/projects/pr-img3.jpg"><img
-                                    src="assets/img/projects/pr-img3.jpg" alt="sidebar-img"></a>
+                            <a class="popup-image pr-img3h" href="assets/img/projects/pr-img3.jpg"><img
+                                    class="pr-img3" src="assets/img/projects/pr-img3.jpg" alt="sidebar-img"></a>
                         </div>
                     </div>
                     <div class="col-4 mb-20">
                         <div class="side-image">
-                            <a class="popup-image" href="assets/img/projects/pr-img4.jpg"><img
-                                    src="assets/img/projects/pr-img4.jpg" alt="sidebar-img"></a>
+                            <a class="popup-image pr-img4h" href="assets/img/projects/pr-img4.jpg"><img
+                                    class="pr-img4" src="assets/img/projects/pr-img4.jpg" alt="sidebar-img"></a>
                         </div>
                     </div>
                     <div class="col-4 mb-20">
                         <div class="side-image">
-                            <a class="popup-image" href="assets/img/projects/pr-img5.jpg"><img
-                                    src="assets/img/projects/pr-img5.jpg" alt="sidebar-img"></a>
+                            <a class="popup-image pr-img5" href="assets/img/projects/pr-img5.jpg"><img
+                                    class="pr-img5" src="assets/img/projects/pr-img5.jpg" alt="sidebar-img"></a>
                         </div>
                     </div>
                     <div class="col-4 mb-20">
                         <div class="side-image">
-                            <a class="popup-image" href="assets/img/projects/pr-img6.jpg"><img
-                                    src="assets/img/projects/pr-img6.jpg" alt="sidebar-img"></a>
+                            <a class="popup-image pr-img6" href="assets/img/projects/pr-img6.jpg"><img
+                                    class="pr-img6" src="assets/img/projects/pr-img6.jpg" alt="sidebar-img"></a>
                         </div>
                     </div>
                 </div>
@@ -208,7 +208,7 @@
                     </div>
                     <div class="col-md-5 wow slideInRight">
                         <div class="page-title-img f-right d-none d-sm-block">
-                            <img src="assets/img/slider/cargo-image-sm.png" alt="">
+                            <img id="cargo-image-sm" src="assets/img/slider/cargo-image-sm.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -268,7 +268,7 @@
                                     </div>
                                     <div class="col-lg-7">
                                         <div class="office-img">
-                                            <img src="assets/img/about/office-img1.jpg" alt="">
+                                            <img id="office-img1" src="assets/img/about/office-img1.jpg" alt="">
                                         </div>
                                     </div>
                                 </div>
@@ -309,7 +309,7 @@
                                     </div>
                                     <div class="col-lg-7">
                                         <div class="office-img">
-                                            <img src="assets/img/about/office-img2.jpg" alt="">
+                                            <img id="office-img2" src="assets/img/about/office-img2.jpg" alt="">
                                         </div>
                                     </div>
                                 </div>
