完成了公司展示页面图片路径替换。

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -67,17 +67,19 @@
                                 </ul>
                             </nav>
                         </div>
+
                     </div>
                     <div class="col-xl-2 col-lg-2 col-6">
                         <div class="header__icons f-right">
                             <ul>
                                 <li><a class="nav-search search-trigger" href="#"><i class="pe-7s-search"></i></a></li>
                                 <li><a href="#"><i class="pe-7s-cart"></i></a></li>
-                                <li><a class="side-toggle" href="javascript:void(0)"><i class="pe-7s-keypad"></i></a>
-                                </li>
+                                <li><a class="side-toggle" href="javascript:void(0)"><i class="pe-7s-keypad"></i></a></li>
+
                             </ul>
                         </div>
                     </div>
+
                 </div>
             </div>
         </div>
