--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -320,45 +320,45 @@
             </div>
         </div>
         <!-- address area end -->
-        <!-- contact form area  -->
-        <div class="contact-form pt-110">
-            <div class="contact-form-inner">
-                <div class="container">
-                    <div class="row wow slideInUp">
-                        <div class="col-xl-12">
-                            <div class="section-title text-center mb-60">
-                                <span class="category"></span>
-                                <h2>请求支持</h2>
-                            </div>
-                        </div>
-                        <div class="col-xl-12">
-                            <div class="sd-form tmd-form">
-                                <form action="#">
-                                    <div class="row">
-                                        <div class="col-lg-4">
-                                            <input type="text" placeholder="姓名">
-                                        </div>
-                                        <div class="col-lg-4">
-                                            <input type="text" placeholder="联系方式">
-                                        </div>
-                                        <div class="col-lg-4">
-                                            <input type="text" placeholder="邮箱">
-                                        </div>
-                                        <div class="col-lg-12">
-                                            <textarea name="message" id="message" placeholder="如果您有任何问题欢迎留言，我们将致电/邮件联系您"></textarea>
-                                        </div>
-                                        <div class="col-lg-12 text-center">
-                                            <button class="shutter-btn" type="submit">发送请求</button>
-                                        </div>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- contact form end -->
+<!--        &lt;!&ndash; contact form area  &ndash;&gt;-->
+<!--        <div class="contact-form pt-110">-->
+<!--            <div class="contact-form-inner">-->
+<!--                <div class="container">-->
+<!--                    <div class="row wow slideInUp">-->
+<!--                        <div class="col-xl-12">-->
+<!--                            <div class="section-title text-center mb-60">-->
+<!--                                <span class="category"></span>-->
+<!--                                <h2>请求支持</h2>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                        <div class="col-xl-12">-->
+<!--                            <div class="sd-form tmd-form">-->
+<!--                                <form action="#">-->
+<!--                                    <div class="row">-->
+<!--                                        <div class="col-lg-4">-->
+<!--                                            <input type="text" placeholder="姓名">-->
+<!--                                        </div>-->
+<!--                                        <div class="col-lg-4">-->
+<!--                                            <input type="text" placeholder="联系方式">-->
+<!--                                        </div>-->
+<!--                                        <div class="col-lg-4">-->
+<!--                                            <input type="text" placeholder="邮箱">-->
+<!--                                        </div>-->
+<!--                                        <div class="col-lg-12">-->
+<!--                                            <textarea name="message" id="message" placeholder="如果您有任何问题欢迎留言，我们将致电/邮件联系您"></textarea>-->
+<!--                                        </div>-->
+<!--                                        <div class="col-lg-12 text-center">-->
+<!--                                            <button class="shutter-btn" type="submit">发送请求</button>-->
+<!--                                        </div>-->
+<!--                                    </div>-->
+<!--                                </form>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        &lt;!&ndash; contact form end &ndash;&gt;-->
         <!-- contact map area start  -->
         <div class="contact-map wow slideInUp">
 
