完成了运输工具管理列表页（还没添加功能。

--- a/src/main/resources/templates/back/allCusPage.html
+++ b/src/main/resources/templates/back/allCusPage.html
@@ -37,7 +37,7 @@
     ***********************************-->
     <div class="nav-header">
         <a class="brand-logo" th:href="@{/backIndex}">
-            <img alt="logo" class="img-thumbnail" style="width: 70%; height: auto" src="">
+            <img alt="logo " class="img-thumbnail logoImg" style="width: 70%; height: auto" id="logo-4" src="assets/image/logo-4.png">
         </a>
         <div class="nav-control">
             <div class="hamburger">
@@ -424,6 +424,7 @@
 <script th:src="@{/js/Chart.bundle.min.js}"></script>
 <script th:src="@{/js/jquery-3.5.1.js}"></script>
 <script th:src="@{/js/proj/setUserInfo.js}"></script>
+
 <!-- Apex Chart -->
 <script th:src="@{/js/apexchart.js}"></script>
 <script th:src="@{/js/jquery.peity.min.js}"></script>
@@ -440,5 +441,6 @@
 <script th:src="@{/js/deznav-init.js}"></script>
 <script th:src="@{/js/demo.js}"></script>
 <script th:src="@{/js/styleSwitcher.js}"></script>
+<script src="../assets/js/test.js"></script>
 </body>
 </html>
