--- a/src/main/resources/templates/back_addOrder.html
+++ b/src/main/resources/templates/back_addOrder.html
@@ -11,7 +11,7 @@
     <meta content="Innap : Hotel Admin Template" name="description">
 
     <!-- PAGE TITLE HERE -->
-    <title>易约--新增房间</title>
+    <title>运单管理</title>
 
     <!-- Custom Stylesheet -->
     <link rel="stylesheet" th:href="@{/css/nice-select.css}">
