--- a/src/main/resources/templates/back/allCoyPage.html
+++ b/src/main/resources/templates/back/allCoyPage.html
@@ -8,10 +8,10 @@
     <meta content="" name="author">
     <meta content="" name="robots">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <meta content="后台人员管理" name="description">
+    <meta content="运输工具管理" name="description">
 
     <!-- PAGE TITLE HERE -->
-    <title>后台人员管理</title>
+    <title>运输工具管理</title>
 
     <!-- Datatable -->
     <link rel="stylesheet" th:href="@{/css/chartist.min.css}">
@@ -91,11 +91,11 @@
                 </li>
                 <li><a aria-expanded="false" class="has-arrow ai-icon" th:href="@{#}">
                     <i class="flaticon-025-dashboard"></i>
-                    <span class="nav-text">运单管理</span>
+                    <span class="nav-text">运输工具管理</span>
                 </a>
                     <ul aria-expanded="false">
-                        <li><a th:href="@{/addOrder}">添加运单</a></li>
-                        <li><a th:href="@{/allOrder}">运单列表</a></li>
+                        <li><a th:href="@{/coy/allCoy}">运输工具列表页</a></li>
+                        <li><a th:href="@{/coy/oneCoy}">运输工具详情页</a></li>
                     </ul>
                 </li>
                 <!--留出来富余   后面再看-->
@@ -166,7 +166,7 @@
                 <div class="col-12">
                     <div class="card">
                         <div class="card-header">
-                            <h4 class="card-title">后台人员列表</h4>
+                            <h4 class="card-title">运输工具列表</h4>
                             <!-- Button trigger modal -->
                             <button type="button" class="btn btn-rounded btn-primary" data-bs-toggle="modal"
                                     data-bs-target="#exampleModalpopover">
@@ -178,38 +178,44 @@
                                 <div class="modal-dialog modal-dialog-centered" role="document">
                                     <div class="modal-content">
                                         <div class="modal-header">
-                                            <h5 class="modal-title">添加用户</h5>
+                                            <h5 class="modal-title">添加运输工具</h5>
                                             <button type="button" class="btn-close" data-bs-dismiss="modal">
                                             </button>
                                         </div>
                                         <div class="modal-body">
-                                            <form method="post" th:action="@{/user/addMan}">
+                                            <form method="post" th:action="@{/coy/add}">
                                                 <div class="mb-3">
-                                                    <label class="mb-1"><strong>账号</strong></label>
-                                                    <input class="form-control" name="act" placeholder="请输入账号"
+                                                    <label class="mb-1"><strong>车牌号</strong></label>
+                                                    <input class="form-control" name="license" placeholder="请输入车牌号"
                                                            type="text">
                                                 </div>
                                                 <div class="mb-3">
-                                                    <label class="mb-1"><strong>密码</strong></label>
-                                                    <input class="form-control" name="pwd"
-                                                           placeholder="请输入密码" type="text">
+                                                    <label class="mb-1"><strong>所属地</strong></label>
+                                                    <input class="form-control" name="address"
+                                                           placeholder="请输入所属地" type="text">
                                                 </div>
                                                 <div class="mb-3">
-                                                    <label class="mb-1"><strong>姓名</strong></label>
-                                                    <input class="form-control" name="name"
-                                                           placeholder="请输入姓名" type="text">
+                                                    <label class="mb-1"><strong>负责人姓名</strong></label>
+                                                    <input class="form-control" name="userName"
+                                                           placeholder="请输入负责人姓名" type="text">
                                                 </div>
                                                 <div class="mb-3">
-                                                    <label class="mb-1"><strong>手机号</strong></label>
-                                                    <input class="form-control" name="phone"
-                                                           placeholder="请输入手机号" type="text">
+                                                    <label class="mb-1"><strong>负责人手机号</strong></label>
+                                                    <input class="form-control" name="userPhone"
+                                                           placeholder="请输入负责人手机号" type="text">
                                                 </div>
                                                 <div class="mb-3">
-                                                    <label class="mb-1"><strong>身份</strong></label>
+                                                    <label class="mb-1"><strong>运输类型</strong></label>
                                                     <select name="type" class="form-control wide mb-3">
-                                                        <option selected="selected" value="1">管理员</option>
-                                                        <option value="2">客户</option>
+                                                        <option value="1">空运</option>
+                                                        <option value="2">海运</option>
+                                                        <option selected="selected" value="3">陆运</option>
                                                     </select>
+                                                </div>
+                                                <div class="mb-3">
+                                                    <label class="mb-1"><strong>其他信息</strong></label>
+                                                    <input class="form-control" name="other"
+                                                           placeholder="请输入其他备注信息" type="text">
                                                 </div>
                                                 <div class="modal-footer">
                                                     <button type="button" class="btn btn-danger light"
@@ -233,28 +239,32 @@
                                     <thead>
                                     <tr>
                                         <th class="align-middle text-center">序号</th>
-                                        <th class="align-middle text-center">姓名</th>
-                                        <th class="align-middle text-center">联系方式</th>
-                                        <th class="align-middle text-center">身份</th>
+                                        <th class="align-middle text-center">牌照号</th>
+                                        <th class="align-middle text-center">负责人姓名</th>
+                                        <th class="align-middle text-center">负责人联系方式</th>
+                                        <th class="align-middle text-center">运输类型</th>
                                         <th class="align-middle text-center">更新时间</th>
                                         <th class="no-sort text-center">操作</th>
                                     </tr>
                                     </thead>
 
                                     <tbody>
-                                    <tr th:each="info : ${userList}">
+                                    <tr th:each="info : ${coys}">
                                         <td class="py-2 text-center" th:text="${infoStat.count}">#</td>
                                         <td class="py-2 text-center">
-                                            <input class="form-control" th:id="'name' + ${info.manId}" placeholder=""
-                                                   th:value="${info.manName}" type="text">
+                                            <input class="form-control" th:id="'coyLicense' + ${info.coyId}" placeholder=""
+                                                   th:value="${info.coyLicense}" type="text">
                                         </td>
                                         <td class="py-2 text-center">
-                                            <input class="form-control" th:id="'phone' + ${info.manId}" placeholder=""
-                                                   th:value="${info.manPhone}" type="text">
+                                            <input class="form-control" th:id="'userName' + ${info.coyId}" placeholder=""
+                                                   th:value="${info.coyPrincipalName}" type="text">
                                         </td>
-                                        <td class="py-2 text-center"
-                                            th:text="(${info.manType} == 1) ? '管理员' : '操作员'">
-                                            <span class="badge light badge-outline-primary">#</span>
+                                        <td class="py-2 text-center">
+                                            <input class="form-control" th:id="'userPhone' + ${info.coyId}" placeholder=""
+                                                   th:value="${info.coyPrincipalPhone}" type="text">
+                                        </td>
+                                        <td class="py-2 text-center">
+                                            <span th:class="${info.coyTypeStrTheme}" th:text="${info.coyTypeStr}">#</span>
                                         </td>
                                         <td class="py-2 text-center" th:text="${info.updTime}">#</td>
                                         <!--<td class=py-2 text-center><span class="badge light badge-danger">否</span></td>-->
@@ -285,12 +295,12 @@
                                                      class="dropdown-menu dropdown-menu-end border py-0">
                                                     <div class="py-2">
                                                         <a class="dropdown-item" href=""
-                                                           th:onclick="'subSetName(1, ' + ${info.manId} + ', $(\'\#name'+ ${info.manId} +'\').val());'">修改姓名</a>
+                                                           th:onclick="'subSetName(1, ' + ${info.coyId} + ', $(\'\#name'+ ${info.coyId} +'\').val());'">修改姓名</a>
                                                         <a class="dropdown-item" href=""
-                                                           th:onclick="'subSetPhone(1, ' + ${info.manId} + ', $(\'\#phone'+ ${info.manId} +'\').val());'">修改手机号</a>
+                                                           th:onclick="'subSetPhone(1, ' + ${info.coyId} + ', $(\'\#phone'+ ${info.coyId} +'\').val());'">修改手机号</a>
                                                         <div class="dropdown-divider"></div>
                                                         <a class="dropdown-item text-danger"
-                                                           th:href="@{'/user/setInfo?type=1&info=null&op=0&id=' + ${info.manId}}">删除</a>
+                                                           th:href="@{'/coy/setInfo?type=1&info=null&op=0&id=' + ${info.coyId}}">删除</a>
                                                     </div>
                                                 </div>
                                             </div>
