--- a/src/main/resources/templates/back/back_index.html
+++ b/src/main/resources/templates/back/back_index.html
@@ -27,7 +27,7 @@
     ***********************************-->
 <div class="nav-header">
     <a class="brand-logo" th:href="@{/backIndex}">
-        <img alt="logo" class="img-thumbnail" style="width: 70%; height: auto" th:src="@{/image/logo-4.png}">
+        <img alt="logo" class="img-thumbnail " style="width: 70%; height: auto" id="logo-4" src="/assets/image/logo-4.png}">
     </a>
     <div class="nav-control">
         <div class="hamburger">
@@ -84,15 +84,25 @@
                     </ul>
 
                 </li>
+<!--                <li><a aria-expanded="false" class="has-arrow ai-icon" th:href="@{#}">-->
+<!--                    <i class="flaticon-025-dashboard"></i>-->
+<!--                    <span class="nav-text">运单管理</span>-->
+<!--                </a>-->
+<!--                    <ul aria-expanded="false">-->
+<!--                        <li><a th:href="@{/addOrder}">添加运单</a></li>-->
+<!--                        <li><a th:href="@{/allOrder}">运单列表</a></li>-->
+<!--                    </ul>-->
+<!--                </li>-->
                 <li><a aria-expanded="false" class="has-arrow ai-icon" th:href="@{#}">
                     <i class="flaticon-025-dashboard"></i>
-                    <span class="nav-text">运单管理</span>
+                    <span class="nav-text">运输工具管理</span>
                 </a>
                     <ul aria-expanded="false">
-                        <li><a th:href="@{/addOrder}">添加运单</a></li>
-                        <li><a th:href="@{/allOrder}">运单列表</a></li>
+                        <li><a th:href="@{/coy/allCoy}">运输工具列表页</a></li>
+                        <li><a th:href="@{/coy/oneCoy}">运输工具详情页</a></li>
                     </ul>
                 </li>
+
                 <!--留出来富余   后面再看-->
                 <!--<li>
                     <a aria-expanded="false" class="has-arrow ai-icon" th:href="@{#}">
@@ -533,6 +543,8 @@
 <script th:src="@{/js/deznav-init.js}"></script>
 <script th:src="@{/js/demo.js}"></script>
 <script th:src="@{/js/styleSwitcher.js}"></script>
+<script src="../assets/js/test.js"></script>
+
 <script>
     $(function () {
         $('#datetimepicker').datetimepicker({
