--- a/src/main/resources/templates/back/allCoyPage.html
+++ b/src/main/resources/templates/back/allCoyPage.html
@@ -185,6 +185,11 @@
                                         <div class="modal-body">
                                             <form method="post" th:action="@{/coy/add}">
                                                 <div class="mb-3">
+                                                    <label class="mb-1"><strong>运输工具名称</strong></label>
+                                                    <input class="form-control" name="coyName"
+                                                           placeholder="请输入运输工具名称" type="text">
+                                                </div>
+                                                <div class="mb-3">
                                                     <label class="mb-1"><strong>车牌号</strong></label>
                                                     <input class="form-control" name="license" placeholder="请输入车牌号"
                                                            type="text">
@@ -295,9 +300,11 @@
                                                      class="dropdown-menu dropdown-menu-end border py-0">
                                                     <div class="py-2">
                                                         <a class="dropdown-item" href=""
-                                                           th:onclick="'subSetName(1, ' + ${info.coyId} + ', $(\'\#name'+ ${info.coyId} +'\').val());'">修改姓名</a>
+                                                           th:onclick="'subSetUserName(1, ' + ${info.coyId} + ', $(\'\#userName'+ ${info.coyId} +'\').val());'">修改姓名</a>
                                                         <a class="dropdown-item" href=""
-                                                           th:onclick="'subSetPhone(1, ' + ${info.coyId} + ', $(\'\#phone'+ ${info.coyId} +'\').val());'">修改手机号</a>
+                                                           th:onclick="'subSetUserName(1, ' + ${info.coyId} + ', $(\'\#userName'+ ${info.coyId} +'\').val());'">修改姓名</a>
+                                                        <a class="dropdown-item" href=""
+                                                           th:onclick="'subSetUserPhone(1, ' + ${info.coyId} + ', $(\'\#userPhone'+ ${info.coyId} +'\').val());'">修改手机号</a>
                                                         <div class="dropdown-divider"></div>
                                                         <a class="dropdown-item text-danger"
                                                            th:href="@{'/coy/setInfo?type=1&info=null&op=0&id=' + ${info.coyId}}">删除</a>
